2017-05-08  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170505
	  see mk/ChangeLog

2017-05-05  Simon J. Gerraty  <sjg@bad.crufty.net>

	* parse.c: not everyone has stdint.h

2017-05-01  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170501
	  see mk/ChangeLog

2017-04-21  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170421
	  Merge with NetBSD make, pick up
	  o str.c: Str_Match: fix closure tests for [^] and add unit-test.

2017-04-20  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170420
	  Merge with NetBSD make, pick up
	  o main.c: only use -C arg "as is" if it contains no 
	    relative component.

2017-04-18  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170418
	  Merge with NetBSD make, pick up
	  o main.c: fix Main_SetObjdir() for relative paths (eg obj).

2017-04-17  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170417
	  Merge with NetBSD make, pick up
	  o fixes a number of coverity complaints
	    - check return value of fseek, fcntl
	    - plug memory leak in Dir_FindFile, Var_LoopExpand,
	      JobPrintCommand, ParseTraditionalInclude
	    - use bmake_malloc() where NULL is not tollerated
	    - use MAKE_ATTR_UNUSED rather that kludges like 
	      return(unused ? 0 : 0)
	    - use purge_cached_realpaths() rather than abuse cached_realpath()

2017-04-13  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170413
	  Merge with NetBSD make, pick up
	  o main.c: when setting .OBJDIR ignore '$' in paths.

	* job.c: use MALLOC_OPTIONS to set malloc_options.

2017-04-11  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170411
	  Merge with NetBSD make, pick up
	  o str.c: Str_Match: allow [^a-z] to behave as expected.

2017-03-26  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170326
	  Merge with NetBSD make, pick up